Fix github icon cutoff

--- a/theme/basic.css
+++ b/theme/basic.css
@@ -79,7 +79,7 @@ nav li {
     display: inline-block;
     margin: 0 .5em;
     padding: 0;
-    height: 1.25em;
+    height: 1.5em;
 }
 
 .icon:before {
